--- a/index.html
+++ b/index.html
@@ -123,6 +123,13 @@
 </section>
 
 
+<section class="slide">
+    <h2 style="color: black">Ресурс доступен по ссылке:</h2>
+    <h3>
+    <a href="http://93.171.139.195:780/">http://93.171.139.195:780/</a>
+    </h3>
+</section>
+
 
 
 
