--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
     <h1>Дальнейшие планы</h1>
     <u1>
         <li>Мультиплеер</li>
+        <li>Возможность играть с несколькими ботами</li>
         <li>Score board</li>
         <li>Чат</li>
         <li>Пользовательская настройка игровых столов</li>
