--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
 </header>
 
 <section class="slide" id="cover">
-    <h2>Команда TODO представляет</h2>
-    <h3>Poker</h3>
+    <img style="height: 70%; width: 100%;margin-top: 50px" src="pictures/poker-table-hire.jpg">
     <style>
         #cover {
         }
@@ -56,10 +55,19 @@
 </section>
 
 <section class="slide">
-    <h2 style="color: black">Состав команды</h2>
+    <h1 style="margin-top: 70px">
+        Карточная игра, цель которой — выиграть.
+    </h1>
+    <h1>
+        Является самой распространённой игрой в мире среди карточных игр.
+    </h1>
+</section>
+
+<section class="slide">
+    <h2 style="color: black">Мы команда TODO</h2>
     <ul>
         Фронтенд
-        <li style="margin-left: 60px">Паничев Сергей </li>
+        <li style="margin-left: 60px">Паничев Сергей</li>
         <li style="margin-left: 60px">Иваниадзе Михаил</li>
         Бэкенд
         <li style="margin-left: 60px">Шепелев Сергей</li>
@@ -68,71 +76,96 @@
     </ul>
 </section>
 
-<section class="slide">
-    <h1 style="text-align: center">Техасский холдем</h1>
-    <img style="height: 300px" src="pictures/poker-table-hire.jpg">
+<!--<section class="slide">-->
+<!--    <h1 style="text-align: center">Техасский холдем</h1>-->
+<!--    <img style="height: 300px" src="pictures/poker-table-hire.jpg">-->
+<!--</section>-->
+
+<section class="slide" style="text-align: center">
+    <h1 style="margin:-20px; bottom: 20px">Как все начиналось</h1>
+    <img style="height: 400px;margin-top: 20px" src="pictures/poxer.png">
 </section>
 
-<section class="slide">
-    <h1>Промежуточный результат</h1>
-    <u1>
-        <li>Авторизация</li>
-        <li>Регистрация</li>
-        <li>Настройка профиля</li>
-        <li>Одиночная игра</li>
-    </u1>
-    <p></p>
+<section class="slide" style="text-align: center">
+    <h1 style="margin:-20px ">К чему пришли</h1>
+    <img style="height: 400px;margin-top: 20px" src="pictures/poxer2.png">
 </section>
 
-<section class="slide">
-    <h1 style="margin:1px ">Стартовая страница</h1>
-    <img style="height: 400px" src="pictures/Screenshot%20from%202019-11-15%2020-20-34.png">
+<!--Фичи-->
+<section class="slide" style="text-align: center">
+    <h1 style="margin:1px ">Ключевые фишки</h1>
+    <img style="height: 400px;margin-top: 20px" src="pictures/chips.jpg">
 </section>
-<section class="slide">
-    <h1 style="margin:1px ">Регистрация</h1>
-    <img style="height: 400px"src="pictures/signup.png">
+
+<section class="slide" style="text-align: center">
+    <h1 style="margin:-20px ">Score board</h1>
+    <img style="margin-top: 20px" src="pictures/scoreboard.png">
 </section>
-<section class="slide">
-    <h1 style="margin:1px ">Авторизация</h1>
-    <img style="height: 400px"src="pictures/login.png">
+
+<section class="slide" style="text-align: center">
+    <h1 style="margin:-20px ">Адаптивность</h1>
+    <div style="margin-top: 20px">
+        <img style="height: 400px; width: 240px" src="pictures/mobile.jpg">
+        <img style="height: 400px; width: 240px" src="pictures/mobile2.jpg">
+    </div>
 </section>
-<section class="slide">
-    <h1 style="margin:1px ">Профиль</h1>
-    <img style="height: 400px"src="pictures/User.png">
+
+<section class="slide" style="text-align: center">
+    <h1 style="margin:-20px ">Список с комнатами</h1>
+    <img style="height: 400px; margin-top: 20px" src="pictures/poxer4.png">
 </section>
-<section class="slide">
-    <h1 style="margin:1px ">Настройка профиля</h1>
-    <img style="height: 400px"src="pictures/change.png">
+
+<section class="slide" style="text-align: center">
+    <h1 style="margin:-20px ">Создание игровых комнат</h1>
+    <img style="height: 400px; margin-top: 20px " src="pictures/poxer5.png">
 </section>
-<section class="slide">
-    <h1 style="margin:1px ">Игра</h1>
-    <img style="height: 400px"src="pictures/single.png">
+
+<!--Технологии-->
+<!--<section class="slide" style="text-align: center">-->
+<!--    <h1 style="margin:-20px ">Что использовали</h1>-->
+<!--</section>-->
+
+
+<!--Безопастность-->
+<section class="slide" style="text-align: center">
+    <h1 style="margin:1px ">Безопастность</h1>
+    <ul style="text-align: start">
+        <li>
+            <div style="display: flex; flex-direction: row">
+                <p>XSS</p>
+                <img style="height: 40px; margin-left: 20px" src="pictures/g.png">
+            </div>
+        </li>
+        <li>
+            <div style="display: flex; flex-direction: row">
+                <p>CSRF</p>
+                <img style="height: 40px; margin-left: 20px" src="pictures/g.png">
+            </div>
+        </li>
+        <li>
+            <div style="display: flex; flex-direction: row">
+                <p>SQL injection</p>
+                <img style="height: 40px; margin-left: 20px" src="pictures/g.png">
+            </div>
+        </li>
+    </ul>
 </section>
 
 
+<!--Игра-->
 
 <section class="slide">
-    <h1>Дальнейшие планы</h1>
-    <u1>
-        <li>Мультиплеер</li>
-        <li>Возможность играть с несколькими ботами</li>
-        <li>Score board</li>
-        <li>Чат</li>
-        <li>Пользовательская настройка игровых столов</li>
-    </u1>
-    <p></p>
+    <iframe style="margin-top: -20px;" src="https://pokertodo.ru" width="100%" height="100%">
+    </iframe>
 </section>
 
-
+<!--Ресурс-->
 <section class="slide">
     <h2 style="color: black">Ресурс доступен по ссылке:</h2>
     <h3>
-    <a href="http://93.171.139.195:780/">http://93.171.139.195:780/</a>
+        <a href="https://pokertodo.ru/">https://pokertodo.ru</a>
     </h3>
 </section>
-
-
-
 
 
 <div class="progress"></div>
